server files load

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.1.1",
     "clx": "^1.0.0",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "firebase": "^7.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
